[tool.poetry]
name = "json-tools"
version = "0.1.0"
description = "Tools for processing JSON data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "json_tools"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.9.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aw-extractor = "json_tools.aw_extractor:main"
